--- a/index.html
+++ b/index.html
@@ -227,11 +227,11 @@
       <h2 style="color: red;">My Projects</h2>
       <div class="projects-grid">
         <div class="project-item">
-          <img src="/WhatsApp Image 2024-12-28 at 19.59.00_fe30cbe7.jpg" alt="Project 1">
+          <img src="WhatsApp Image 2024-12-28 at 19.59.00_fe30cbe7.jpg" alt="Project 1">
           <p>Interactive 3D User Experience Design</p>
       </div>
       <div class="project-item">
-          <img src="/WhatsApp Image 2024-12-28 at 19.59.01_4981c7d0.jpg" alt="Project 2">
+          <img src="WhatsApp Image 2024-12-28 at 19.59.01_4981c7d0.jpg" alt="Project 2">
           <p>3D Model Integration for E-Commerce</p>
       </div>
       <div class="project-item">
@@ -243,7 +243,7 @@
           <p>3D Interactive Landing Page Design</p>
       </div>
       <div class="project-item">
-          <img src="/WhatsApp Image 2024-12-28 at 19.59.04_20ab6d2a.jpg" alt="Project 5">
+          <img src="WhatsApp Image 2024-12-28 at 19.59.04_20ab6d2a.jpg" alt="Project 5">
           <p>Augmented Reality Website Features</p>
       </div>
       
