--- a/index.html
+++ b/index.html
@@ -231,6 +231,10 @@
               <img src="WhatsApp Image 2024-12-28 at 19.59.04_20ab6d2a.jpg" alt="Project 6">
               <p>WebGL for Immersive Web Experiences</p>
           </div>
+        <div class="project-item">
+              <img src="WhatsApp Image 2024-12-28 at 19.58.59_3c1f9aa7.jpg" alt="Project 6">
+              <p>WebGL for Immersive Web Experiences</p>
+          </div>
           <div class="project-item">
               <img src="WhatsApp Image 2024-12-28 at 19.59.05_7cdb961a.jpg" alt="Project 7">
               <p>Responsive 3D Web Interfaces</p>
